# algorithms_and_ds

./: .gitignore  CMakeLists.txt  README.md  bubble.h  input.h  main  main.cpp  menu.h  register.h  registry.h  run.cpp  run.h  runner.h  sort.h
algorithms/: bubble.h  bubble_register.cpp  bucked_register.cpp  bucket.h  counting.h  counting_register.cpp  heap.h  heap_register.cpp  insertion.h  insertion_register.cpp  merge.h  merge_register.cpp  quick.h  quick_register.cpp  selection.h  selection_register.cpp
